Update translations for command descriptions